[metadata]
name = groundwatertable
version = 0.1.0
author = Michael Hirsch, Ph.D.
description = Plotting of groundwater table using .shp shape files.
url = https://github.com/scivision/groundwatertable
keywords =
  groundwater
  water table
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: GIS
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  numpy
  gdal

[options.extras_require]
tests =
  pytest
  flake8
  mypy
plots =
  cartopy
  matplotlib

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
